--- a/pom.xml
+++ b/pom.xml
@@ -14,5 +14,10 @@
             <artifactId>hazelcast</artifactId>
             <version>3.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>maven-bundle-plugin</artifactId>
+            <version>1.4.3</version>
+        </dependency>
     </dependencies>
 </project>
